reactDashboard/src/components/HeatMap/Heatmap.css
.heatmap {
  overflow-y: auto;
  max-height: 600px;
  height: 100%;
  background-color: white;
}

.darkmode .heatmap {
  background-color: rgb(64, 64, 64);
  box-shadow: none;
}

.heatmap-container {
  padding: 0;
}

.heatmap table {
  border-collapse: separate;
  border-spacing: 0;
}

.heatmap table th {
  vertical-align: top;
  position: sticky;
  position: -webkit-sticky;
  top: 0;
  background-color: white;
  color: #133a53;
}

.darkmode .heatmap table th {
  color: #f2f2f2;
  background-color: rgb(64, 64, 64);
}

.heatmap table th div.subheading {
  font-weight: normal;
}

.table th {
  border-top: none;
}

.darkmode .table thead th {
  border-bottom: 1px solid #020202;
}

.heatmap table tr.area td {
  vertical-align: middle;
  border-top: 1px solid #f2f2f2;
}

.darkmode .heatmap table tr.area td {
  color: #f2f2f2;
  background-color: rgb(64, 64, 64);
  border-top: 1px solid #020202;
}

.heatmap .l-0 {
  stroke: #e0e0e0;
}
.heatmap .l-1 {
  stroke: #ffffb2;
}
.heatmap .l-2 {
  stroke: #fed976;
}
.heatmap .l-3 {
  stroke: #feb24c;
}
.heatmap .l-4 {
  stroke: #fd8d3c;
}
.heatmap .l-5 {
  stroke: #f03b20;
}
.heatmap .l-6 {
  stroke: #bd0026;
}
.heatmap .l-7 {
  stroke: #020202;
}

.heatmapScale .l-0 {
  background-color: #e0e0e0;
}
.heatmapScale .l-1 {
  background-color: #ffffb2;
}
.heatmapScale .l-2 {
  background-color: #fed976;
}
.heatmapScale .l-3 {
  background-color: #feb24c;
}
.heatmapScale .l-4 {
  background-color: #fd8d3c;
}
.heatmapScale .l-5 {
  background-color: #f03b20;
}
.heatmapScale .l-6 {
  background-color: #bd0026;
}

.darkmode .heatmapScale .l-0,
.darkmode .heatmapScale .l-1,
.darkmode .heatmapScale .l-2,
.darkmode .heatmapScale .l-3 {
  color: #020202;
}

/* to meet accessibility requirements */
.heatmapScale .l-6,
.heatmapScale .l-7 {
  color: white;
}

.heatmapScale .l-7 {
  background-color: #020202;
}

.heatmapScale {
  text-align: center;
  padding-top: 0;
  padding-bottom: 0;
  margin-bottom: 10px;
  margin-left: 0;
  border: 1px solid darkgrey;
}

.darkmode .heatmapScale {
  border-color: #f2f2f2;
  background-color: #f2f2f2;
}

.heatmapScale .row {
  flex-wrap: nowrap;
}

.heatmapScale .col {
  padding: 2px 15px;
}

.heatmapScale .col.smallscale {
  display: none;
}

@media all and (max-width: 810px) {
  .heatmapScale .col.smallscale {
    display: inline;
  }
  .heatmapScale .col.largescale {
    display: none;
  }
}

.darkmode .heatmapScale {
  color: #020202;
}

.darkmode .heatmapScale .l-7 {
  color: white;
}

@media all and (max-width: 600px) {
  .heatmap {
    font-size: 80%;
  }
}

@media all and (max-width: 450px) {
  .heatmapScale .col {
    padding: 5px 5px;
  }
}

.heatbarLine {
  border: 1px solid darkgrey;
  margin: 2px;
}

.darkmode .heatbarLine {
  background-color: white;
}

svg.heatbar {
  height: 1.5em;
  width: 100%;
}

/* fix light-blue for darkmode */
.heatmap table tr.area td.scotland-total {
  font-weight: bold;
  color: #287db2;
}

.darkmode .heatmap table tr.area td.scotland-total {
  color: #c1def1;
}

